--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /../../../../../../../:\Users\Peovic\Downloads\demo\ProjekatPGP\.idea/dataSources/
 /dataSources.local.xml
@@ -9,4 +9,4 @@
 
 /target/
 /.idea/
-*.impl
+*.iml
